add core functions of dpdk eal, membuf into split
use dataplane_core for loosely coupled and will be composed into
dataplane class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_STANDARD 11)
 # To use the library, must specify this path.
 set(VENDOR_DPDK_DIR ${CMAKE_SOURCE_DIR}/vendor/dpdk)
 
+include_directories(${VENDOR_DPDK_DIR}/x86_64-native-linuxapp-gcc/include)
+link_directories(${VENDOR_DPDK_DIR}/x86_64-native-linuxapp-gcc/lib)
+
 add_subdirectory(module/gpuflow)
 
 add_executable(GPUFlow module/main.cpp)
