split out cpu/gpu core and make generic LPM object
The generic LPM object is not used as subtype polymorphism, just
parameterized common members, and defining common functionalities, but
may not be useful in dynamic dispatch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 include_directories(${VENDOR_DPDK_DIR}/x86_64-native-linuxapp-gcc/include)
 link_directories(${VENDOR_DPDK_DIR}/x86_64-native-linuxapp-gcc/lib)
 
+include_directories(module)
 add_subdirectory(module/gpuflow)
 
 add_executable(GPUFlow module/main.cpp)
