run cpu version if no cuda is provided
Also, add define macro for defining external flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,13 @@ set(CUDA_SEPARABLE_COMPILATION ON)
 set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 set(CUDA_HOST_COMPILER g++)
 
+if(${CUDA_FOUND})
+    message("Found CUDA, compilation will include gpu version.")
+endif()
+
+add_definitions(-D_DEBUG)
+add_definitions(-D_GPU_EXEC)
+
 SET(CMAKE_CXX_FLAGS "-fno-stack-protector -Wall -Wextra -Wno-unused-parameter -g -O3 -std=c++11 -march=native -msse4.2")
 SET(CMAKE_C_FLAGS "-fno-stack-protector -Wall -Wextra -Wno-unused-parameter -g -O3 -std=c11 -march=native -msse4.2")
 
@@ -30,6 +37,11 @@ link_directories(${VENDOR_DPDK_DIR}/x86_64-native-linuxapp-gcc/lib)
 include_directories(gpuflow)
 add_subdirectory(gpuflow/dataplane)
 
-cuda_add_executable(GPUFlow gpuflow/main.cpp)
-
-target_link_libraries(GPUFlow GPU_FLOW_LIBS CU_OBJ)
+if(${CUDA_FOUND})
+    cuda_add_executable(GPUFlow gpuflow/main.cpp)
+    target_link_libraries(GPUFlow GPU_FLOW_LIBS CU_OBJ)
+else()
+    remove_definitions(-D_GPU_EXEC)
+    add_executable(GPUFlow gpuflow/main.cpp)
+    target_link_libraries(GPUFlow GPU_FLOW_LIBS)
+endif()
