--- a/gpuflow/dataplane/CMakeLists.txt
+++ b/gpuflow/dataplane/CMakeLists.txt
@@ -6,13 +6,14 @@ file(GLOB_RECURSE CORE_CPU_HEADERS "cpu/*.h")
 
 file(GLOB_RECURSE CORE_GPU_SOURCES "gpu/*.cpp")
 file(GLOB_RECURSE CORE_GPU_HEADERS "gpu/*.h")
-file(GLOB_RECURSE CORE_GPU_CUDA_HEADERS "gpu/cuda/*.h")
 
-# CU files
-file(GLOB_RECURSE CORE_GPU_CUDA_SOURCES "gpu/cuda/*.cu")
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -gencode arch=compute_61,code=sm_61; -std=c++11)
-
-cuda_add_library(CU_OBJ ${CORE_GPU_CUDA_SOURCES})
+if (${CUDA_FOUND})
+    # CU files
+    file(GLOB_RECURSE CORE_GPU_CUDA_HEADERS "gpu/cuda/*.h")
+    file(GLOB_RECURSE CORE_GPU_CUDA_SOURCES "gpu/cuda/*.cu")
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -gencode arch=compute_61,code=sm_61; -std=c++11)
+    cuda_add_library(CU_OBJ ${CORE_GPU_CUDA_SOURCES})
+endif()
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
@@ -60,10 +61,17 @@ SET(ALL_LIBS
         pthread dl rt
         -Wl,--no-whole-archive)
 
-cuda_add_library(GPU_FLOW_LIBS
-        ${CORE_SOURCES} ${CORE_HEADERS}
-        ${CORE_CPU_SOURCES} ${CORE_CPU_HEADERS}
-        ${CORE_GPU_SOURCES} ${CORE_GPU_HEADERS})
+if (${CUDA_FOUND})
+    # Compile cuda binary
+    cuda_add_library(GPU_FLOW_LIBS
+            ${CORE_SOURCES} ${CORE_HEADERS}
+            ${CORE_CPU_SOURCES} ${CORE_CPU_HEADERS}
+            ${CORE_GPU_SOURCES} ${CORE_GPU_HEADERS})
+else()
+    add_library(GPU_FLOW_LIBS
+            ${CORE_SOURCES} ${CORE_HEADERS}
+            ${CORE_CPU_SOURCES} ${CORE_CPU_HEADERS})
+endif ()
 
 target_link_libraries(GPU_FLOW_LIBS ${ALL_LIBS})
 
