fix up non-cuda cpu only compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,20 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
 find_package(numa REQUIRED)
-find_package(CUDA REQUIRED)
-set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
-set(CUDA_SEPARABLE_COMPILATION ON)
-set(CUDA_PROPAGATE_HOST_FLAGS OFF)
-set(CUDA_HOST_COMPILER g++)
+find_package(CUDA)
 
 if(${CUDA_FOUND})
     message("Found CUDA, compilation will include gpu version.")
+    set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
+    set(CUDA_SEPARABLE_COMPILATION ON)
+    set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+    set(CUDA_HOST_COMPILER g++)
+    add_definitions(-D_GPU_EXEC)
+else()
+    message("CUDA not found, compilation will include only cpu version.")
 endif()
 
 add_definitions(-D_DEBUG)
-add_definitions(-D_GPU_EXEC)
 
 SET(CMAKE_CXX_FLAGS "-fno-stack-protector -Wall -Wextra -Wno-unused-parameter -g -O3 -std=c++11 -march=native -msse4.2")
 SET(CMAKE_C_FLAGS "-fno-stack-protector -Wall -Wextra -Wno-unused-parameter -g -O3 -std=c11 -march=native -msse4.2")
